# stdtracer

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README  configure  x
.github/workflows/: cpp.yml
cmake/: benchmarks.cmake  cuda_examples.cmake  examples.cmake  package.cmake  tests.cmake
examples/: example_1.cpp  example_2.cpp  example_counters.cpp  example_cuda.cu  example_patient.cpp  example_rate.cpp  example_simple.cpp  example_simple_log.cpp  example_simple_thread.cpp  example_site.cpp  example_stack.cpp  example_thread.cpp  example_thread_log.cpp  example_timeline.cpp
examples/multi/: example_multi.cpp  trace.cpp  trace.hpp
include/: stdtracer  stdtracer.hpp  stdtracer_disable  stdtracer_simple  stdtracer_stack  stdtracer_thread  tracer.hpp
include/bits/: stdtracer_base.hpp  stdtracer_ctx_log.hpp  stdtracer_ctx_simple.hpp  stdtracer_ctx_stack.hpp  stdtracer_ctx_stat.hpp  stdtracer_ctx_thread.hpp  stdtracer_ctx_thread_log.hpp  stdtracer_log_ctx.hpp  stdtracer_scope.hpp  stdtracer_simple_ctx.hpp  stdtracer_stack_ctx.hpp  stdtracer_xterm.hpp
include/tracer/: cuda  disable  patient  rate  simple  simple_log  simple_thread  site  stack  thread  thread_log  timeline  unsafe
include/tracer/bits/: config.hpp  counters.hpp  cuda.hpp  patient.hpp  rate.hpp  simple.hpp  simple_log.hpp  simple_thread.hpp  site.hpp  stack.hpp  stdtracer_ctx_log.hpp  stdtracer_ctx_simple.hpp  stdtracer_ctx_stack.hpp  stdtracer_ctx_thread.hpp  stdtracer_ctx_thread_log.hpp  stdtracer_ctx_timeline.hpp  stdtracer_cuda_scope.hpp  stdtracer_macros.hpp  stdtracer_scope.hpp  stdtracer_xterm.hpp  thread_log.hpp  timeline.hpp  unsafe.hpp
src/: tracer.cpp
testdata/: simple.txt
tests/: bench_1.cpp  benchmark.hpp  build_info.hpp  test_1.cpp  test_counters.cpp  test_multi.cpp  test_patient.cpp  test_report.cpp  test_site.cpp  test_unsafe.cpp  testing.hpp
tests/data/: stack.txt  thread.txt
