CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(stdtracer)

SET(CMAKE_CXX_STANDARD 14)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

# Targets
ADD_LIBRARY(stdtracer src/tracer.cpp)
TARGET_INCLUDE_DIRECTORIES(stdtracer PRIVATE ${CMAKE_SOURCE_DIR}/include)

INSTALL(TARGETS stdtracer ARCHIVE DESTINATION lib)
INSTALL(DIRECTORY include DESTINATION .)

OPTION(BUILD_TESTS "Build tests." ON)
OPTION(BUILD_EXAMPLES "Build examples." ON)

IF(BUILD_TESTS)
    ENABLE_TESTING()
    INCLUDE(cmake/tests.cmake)
ENDIF()

IF(BUILD_EXAMPLES)
    INCLUDE(cmake/examples.cmake)
ENDIF()

INCLUDE(cmake/package.cmake)
